// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner large 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="-spinner- -spinnerLarge-"
  data-component-name="BusyIndicator"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner medium 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="-spinner- -spinnerMedium-"
  data-component-name="BusyIndicator"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner small 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="-spinner- -spinnerSmall-"
  data-component-name="BusyIndicator"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner with custom class name 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="-spinner- testClassName1337 -spinnerLarge-"
  data-component-name="BusyIndicator"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;
